--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(learnDataStructure C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(learnDataStructure main.c)
+add_executable(learnDataStructure main.c test/test.c list/slist.c list/sequencelist.c function.h stack/linkedstack.c stack/arraystack.c stack/stacktest1.c)
